Added Persistence Mechanisms

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 spring.application.name=demo
 
 astro.baseUrl=http://api.open-notify.org
+
 # Logging options
 logging.level.web=DEBUG
+logging.level.sql=DEBUG
+logging.level.org.springframework.test.context.transaction.TransactionContext=DEBUG
+# JPA database options
+spring.jpa.hibernate.ddl-auto=update
